# python_auto_nongke

./: .gitignore  README.md  poetry.bat  poetry.sh  pyproject.toml
package/: package.bat  package.sh  setup.py
package/linux/: start.sh  stop.sh  test.sh
package/wheel/: dmat_common-0.1-py3-none-any.whl  dmat_common-0.2-py3-none-any.whl  dmat_db-0.1-py3-none-any.whl  dmat_db-0.2-py3-none-any.whl  dmat_flask-0.1-py3-none-any.whl  dmat_flask-0.2-py3-none-any.whl
project/: constant.py  main.py  shibie.py
project/plugs/: config_tool.py  decorator.py  excel_tool.py  log_tool.py  object_tool.py  show_tool.py  style_tool.py  time_tool.py  type_tool.py  utils.py  zip_tool.py
project/plugs/file/: file_tool.py
project/test/: test.py  test1.py  test2.py  test3.py  test4.py  test5.py
project/toprice/: assessment_UI.py  handle_file.py  project_UI.py
